6709972: runThese failed with assert(false,"bad AD file")

Guard AryEqNode construction with has_match_rule() test, set SpecialArraysEquals default off

Reviewed-by: kvn, never